test/extern/multilocale/externRemoteRecord3.good
externRemoteRecord3.chpl:18: error: remote records (like 'myRArg') cannot be passed to external routines (like 'foo')
